# ortofotoscrapper

./: Cargo.toml
src/: main.rs
