[package]
name = "ortofotoscrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.5"
tokio = {version = "1.38.0", features = ["full"] }
tokio-macros = "2.3.0"
image = "0.25.1"
imageproc = "0.25.0"
futures = "0.3.30"
reqwest-retry = "0.6.0"
reqwest-middleware = "0.3.0"
